# LeetCodeApp

./: .gitignore  CMakeLists.txt  LeetCodeApp.sln  LeetCodeApp.vcxproj  LeetCodeApp.vcxproj.filters  README.md  packages.config  vcpkg.json
.github/workflows/: c-cpp.yml  msbuild.yml
Res/: PythonApplication1.pyw  icons.qrc
src/API/: RequestManager.cpp  RequestManager.h
src/Common/: CookieHandler.h  DefaultSizeable.h  NavButton.cpp  NavButton.h  ProblemWidgetData.h  RunCodeResult.h  Task.h  User.h  main.cpp
src/Data/: CachedStorage.cpp  CachedStorage.h  JsonManager.cpp  JsonManager.h
src/UI/: LeetCodeDesktop.cpp  LeetCodeDesktop.h  LeetCodeDesktop.qrc  LeetCodeDesktop.ui  LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  NavWidget.cpp  NavWidget.h  NavWidget.ui  ProblemWidget.cpp  ProblemWidget.h  ProblemWidget.ui  TaskViewer.cpp  TaskViewer.h  TaskViewer.ui  UserWidget.cpp  UserWidget.h  UserWidget.ui  WindowTool.cpp  WindowTool.h  WindowTool.ui
x64/Debug/: LeetCodeApp.exe.recipe  LeetCodeApp.vcxproj.FileListAbsolute.txt
x64/Debug/LeetCodeApp.tlog/: CL.12696.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LeetCodeApp.lastbuildstate  LeetCodeApp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.write.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
x64/Debug/moc/: moc_LeetCodeDesktop.cpp  moc_ProblemWidget.cpp  moc_WindowTool.cpp
x64/Debug/qmake/temp/: props.txt  qtvars.vcxproj  qtvars_x64_Debug.props
x64/Debug/rcc/: qrc_LeetCodeDesktop.cpp
x64/Debug/uic/: ui_LeetCodeDesktop.h  ui_ProblemWidget.h  ui_WindowTool.h
x64/Release/: LeetCodeApp.exe.recipe  LeetCodeApp.vcxproj.FileListAbsolute.txt
x64/Release/LeetCodeApp.tlog/: CL.13520.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  LeetCodeApp.lastbuildstate  LeetCodeApp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.write.1u.tlog
x64/Release/moc/: moc_LeetCodeDesktop.cpp  moc_ProblemWidget.cpp  moc_WindowTool.cpp
x64/Release/qmake/temp/: .qmake.stash  qtvars.vcxproj  qtvars_x64_Release.props
x64/Release/rcc/: qrc_LeetCodeDesktop.cpp
x64/Release/uic/: ui_LeetCodeDesktop.h  ui_ProblemWidget.h  ui_WindowTool.h
